@@ -1,0 +1,2 @@
+RAILS_CONNECTION_ADAPTERS << 'odbc'
+require 'active_record/connection_adapters/odbc_adapter'
