@@ -1,3 +1,8 @@
+December 06, 2006, V1.2-rc1:
+  * Added support for Progress
+  * Added option to install adapter as a plugin
+  * Added option to install adapter as a gem
+
 October 18, 2006, V1.1:
   * Added support for DB2, MySQL, Sybase and SQL Server
   * Fixed initial unicode support
